--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-basic-app",
-  "homepage": "https://nishkohli96.github.io/react-basic-app/",
+  "homepage": "https://nishkohli96.github.io/react-basic-app",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -24,7 +24,8 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
