--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://nishkohli96.github.io/react-basic-app",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -17,10 +16,14 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-uglify": "^3.0.2",
     "husky": "^4.2.5",
+    "i18next": "^19.7.0",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-http-backend": "^1.0.19",
     "lint-staged": "^10.2.13",
     "prettier": "^2.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.7.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
