--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prettier": "^2.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.8.2",
     "react-i18next": "^11.7.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
