--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^2.6.2",
+    "@date-io/date-fns": "1.3.13",
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
