--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "i18next-browser-languagedetector": "^6.0.1",
     "i18next-http-backend": "^1.0.19",
     "lint-staged": "^10.2.13",
+    "mobx": "^6.0.3",
+    "mobx-react": "^7.0.4",
     "prettier": "^2.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -28,6 +30,7 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.2.0",
     "styled-theming": "^2.2.0"
   },
