--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@casl/ability": "^4.1.6",
+    "@casl/react": "^2.1.1",
     "@date-io/date-fns": "1.3.13",
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
@@ -20,17 +22,25 @@
     "i18next-browser-languagedetector": "^6.0.1",
     "i18next-http-backend": "^1.0.19",
     "lint-staged": "^10.2.13",
+    "material-auto-rotating-carousel": "^3.0.2",
+    "material-ui-bottom-sheet": "^0.5.1",
+    "material-ui-feature-discovery-prompt": "^1.0.1",
+    "material-ui-password-field": "^2.1.2",
+    "material-ui-share": "^0.1.1",
     "mobx": "^6.0.3",
     "mobx-react": "^7.0.4",
     "prettier": "^2.1.1",
     "react": "^16.13.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.2",
     "react-i18next": "^11.7.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-swipeable-views": "^0.13.9",
     "redux-persist": "^6.0.0",
+    "store": "^2.0.12",
     "styled-components": "^5.2.0",
     "styled-theming": "^2.2.0"
   },
@@ -75,7 +85,7 @@
   },
   "lint-staged": {
     "*.{js, jsx, ts, tsx, md, html}": [
-      "eslint --fix-dry-run",
+      "eslint --fix",
       "prettier --write"
     ]
   },
