fullcalendar initial setup

--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
     "@casl/ability": "^4.1.6",
     "@casl/react": "^2.1.1",
     "@date-io/date-fns": "1.3.13",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@fullcalendar/bootstrap": "^5.4.0",
+    "@fullcalendar/core": "^5.4.0",
+    "@fullcalendar/daygrid": "^5.4.0",
+    "@fullcalendar/react": "^5.4.0",
+    "@fullcalendar/timegrid": "^5.4.0",
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
@@ -12,6 +18,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.5.3",
     "date-fns": "^2.14.0",
     "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^4.3.0",
@@ -25,6 +32,7 @@
     "material-auto-rotating-carousel": "^3.0.2",
     "mobx": "^6.0.3",
     "mobx-react": "^7.0.4",
+    "moment": "^2.29.1",
     "prettier": "^2.1.1",
     "react": "^16.13.1",
     "react-custom-scrollbars": "^4.2.1",
