--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@fullcalendar/bootstrap": "^5.4.0",
     "@fullcalendar/core": "^5.4.0",
     "@fullcalendar/daygrid": "^5.4.0",
+    "@fullcalendar/interaction": "^5.4.0",
+    "@fullcalendar/moment": "^5.4.0",
     "@fullcalendar/react": "^5.4.0",
     "@fullcalendar/timegrid": "^5.4.0",
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -33,6 +36,7 @@
     "mobx": "^6.0.3",
     "mobx-react": "^7.0.4",
     "moment": "^2.29.1",
+    "nanoid": "^3.1.16",
     "prettier": "^2.1.1",
     "react": "^16.13.1",
     "react-custom-scrollbars": "^4.2.1",
