--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fullcalendar/core": "^5.4.0",
     "@fullcalendar/daygrid": "^5.4.0",
     "@fullcalendar/interaction": "^5.4.0",
+    "@fullcalendar/list": "^5.4.0",
     "@fullcalendar/moment": "^5.4.0",
     "@fullcalendar/react": "^5.4.0",
     "@fullcalendar/timegrid": "^5.4.0",
@@ -36,7 +37,7 @@
     "mobx": "^6.0.3",
     "mobx-react": "^7.0.4",
     "moment": "^2.29.1",
-    "nanoid": "^3.1.16",
+    "nanoid": "^3.1.17",
     "prettier": "^2.1.1",
     "react": "^16.13.1",
     "react-custom-scrollbars": "^4.2.1",
