--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "redux-persist": "^6.0.0",
     "store": "^2.0.12",
     "styled-components": "^5.2.0",
-    "styled-theming": "^2.2.0"
+    "styled-theming": "^2.2.0",
+    "tippy.js": "^6.2.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -91,8 +92,8 @@
   },
   "lint-staged": {
     "*.{js, jsx, ts, tsx, md, html}": [
-      "eslint --fix",
-      "prettier --write"
+      "prettier --write",
+      "eslint --fix"
     ]
   },
   "plugins": [
