--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-swipeable-bottom-sheet": "^1.1.2",
     "react-swipeable-views": "^0.13.9",
     "redux-persist": "^6.0.0",
     "store": "^2.0.12",
