folder structure reorganize

--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "moment": "^2.29.1",
     "nanoid": "^3.1.17",
     "prettier": "^2.1.1",
+    "rc-time-picker": "^3.7.3",
     "react": "^16.13.1",
     "react-custom-scrollbars": "^4.2.1",
+    "react-day-picker": "^7.4.8",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.2",
     "react-i18next": "^11.7.2",
