--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,8 @@ NodeServer/node_modules
 # misc
 .DS_Store
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.testing
+.env.prod
 
 npm-debug.log*
 yarn-debug.log*
