--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,6 @@
 {
     "compilerOptions": {
-      "baseUrl": "src",
-      "paths": {
-        "@Mui-Atoms/*": ["./components/Mui-Atoms/*"]
-      }
+      "baseUrl": "src" 
     },
     "include": ["src/**/*"]
 }
