--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.5.3",
     "customize-cra": "^1.0.0",
     "date-fns": "^2.14.0",
+    "env-cmd": "^10.1.0",
     "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-imagemin": "^7.1.0",
@@ -61,7 +62,9 @@
     "tippy.js": "^6.2.7"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "env-cmd -f .env react-app-rewired start",
+    "start-prod": "env-cmd -f .env.prod react-app-rewired start",
+    "start-testing": "env-cmd -f .env.testing react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
