--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
     "@reduxjs/toolkit": "^1.4.0",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "autoprefixer": "9",
     "bootstrap": "^4.5.3",
     "customize-cra": "^1.0.0",
     "date-fns": "^2.14.0",
@@ -41,6 +43,7 @@
     "mobx-react": "^7.0.4",
     "moment": "^2.29.1",
     "nanoid": "^3.1.17",
+    "postcss": "7",
     "prettier": "^2.1.1",
     "rc-time-picker": "^3.7.3",
     "react": "^16.13.1",
@@ -59,6 +62,7 @@
     "store": "^2.0.12",
     "styled-components": "^5.2.0",
     "styled-theming": "^2.2.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "tippy.js": "^6.2.7"
   },
   "scripts": {
