router updated for 404 page

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "start-testing": "env-cmd -f .env.testing react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
