--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -4,18 +4,18 @@ on: [push]
 
 jobs:
     build:
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-latest  
 
         strategy:
             matrix:
                 node-version: [14.x]
-        
+
         steps:
             - name: Git Checkout
               uses: actions/checkout@v2
 
-            - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v1
+            - name: Setup Node env
+              uses: actions/setup-node@v2.1.4
               with:
                   node-version: ${{ matrix.node-version }}
 
